--- a/frame.css
+++ b/frame.css
@@ -16,7 +16,7 @@
   height: 81px;
   width: 595px;
   position: relative;
-  background-color: #007dfe;
+  background-color: var(--blue-b300-primary);
   display: none;
   max-width: 100%;
   z-index: 0;
@@ -50,7 +50,7 @@
 .consolidated-e-statement2 {
   margin: 0;
   height: 19.1px;
-  font-size: 10px;
+  font-size: var(--font-size-3xs);
   display: flex;
   font-style: italic;
   font-weight: 400;
@@ -71,7 +71,7 @@
 .header-content {
   width: 214.5px;
   justify-content: flex-end;
-  padding: 0 0 1px;
+  padding: 0 0 var(--padding-12xs);
   box-sizing: border-box;
 }
 .logo-variant-icon2 {
@@ -99,21 +99,21 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 12px;
-  font-size: 8px;
+  gap: var(--gap-xs);
+  font-size: var(--font-size-5xs);
 }
 .header2 {
   align-self: stretch;
-  background-color: #007dfe;
+  background-color: var(--blue-b300-primary);
   display: flex;
   flex-direction: row;
   align-items: flex-end;
   justify-content: space-between;
-  padding: 15px 16px 14px;
+  padding: var(--padding-mini) var(--padding-base) var(--padding-sm);
   box-sizing: border-box;
   position: relative;
   max-width: 100%;
-  gap: 20px;
+  gap: var(--gap-xl);
   z-index: 1;
 }
 .namaname2,
@@ -137,16 +137,16 @@
 .name-value {
   flex: 1;
   align-items: center;
-  gap: 8px;
+  gap: var(--gap-5xs);
 }
 .user-name-row {
   align-self: stretch;
   align-items: flex-start;
-  gap: 4px;
+  gap: var(--gap-9xs);
 }
 .kcp-tangerang-summarecon2 {
   position: relative;
-  color: #333;
+  color: var(--black-b400-txttitle);
 }
 .branch-row,
 .branch-value1,
@@ -155,22 +155,22 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  gap: 8px;
+  gap: var(--gap-5xs);
 }
 .branch-row,
 .user-row {
   align-items: flex-start;
-  gap: 4px;
+  gap: var(--gap-9xs);
 }
 .user-row {
   width: 262px;
   flex-direction: column;
-  gap: 6px;
+  gap: var(--gap-7xs);
 }
 .jan-2023-2 {
   flex: 1;
   position: relative;
-  color: #333;
+  color: var(--black-b400-txttitle);
 }
 .tgl-downloaddownloaded-on-container2 {
   position: relative;
@@ -186,12 +186,12 @@
 }
 .user-row1 {
   flex-direction: column;
-  gap: 6px;
+  gap: var(--gap-7xs);
   min-width: 146px;
 }
 .user-detail {
   flex-direction: row;
-  gap: 20px;
+  gap: var(--gap-xl);
   max-width: 100%;
 }
 .dari-152,
@@ -217,17 +217,17 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  padding: 0 0 0 17px;
-  color: #686868;
+  padding: 0 0 0 var(--padding-mid);
+  color: var(--black-b200-txtplaceholder);
 }
 .name5 {
   width: 40px;
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-start;
-  gap: 6px;
+  gap: var(--gap-7xs);
   text-align: right;
-  color: #333;
+  color: var(--black-b400-txttitle);
 }
 .page,
 .user-container,
@@ -241,28 +241,28 @@
 .user-container {
   flex: 1;
   flex-wrap: wrap;
-  gap: 16px;
+  gap: var(--gap-base);
   z-index: 1;
 }
 .page,
 .user-info {
   align-self: stretch;
-  padding: 0 16px;
+  padding: 0 var(--padding-base);
   box-sizing: border-box;
-  font-size: 8px;
-  color: #000;
+  font-size: var(--font-size-5xs);
+  color: var(--color-black);
 }
 .page {
   flex-direction: column;
-  padding: 0 0 4px;
-  gap: 16px;
+  padding: 0 0 var(--padding-9xs);
+  gap: var(--gap-base);
   text-align: left;
-  font-size: 12px;
-  color: #fff;
-  font-family: "TT Interphases";
+  font-size: var(--font-size-xs);
+  color: var(--black-b0-bgwhite);
+  font-family: var(--font-tt-interphases);
 }
 .stock {
-  color: #686868;
+  color: var(--black-b200-txtplaceholder);
 }
 .sahamstock-txt {
   line-break: anywhere;
@@ -284,9 +284,9 @@
 .market-value1,
 .stock-detail {
   flex: 1;
-  background-color: #cae6fc;
+  background-color: var(--color-lightblue);
   overflow: hidden;
-  padding: 8px;
+  padding: var(--padding-5xs);
   box-sizing: border-box;
 }
 .stock-detail {
@@ -310,22 +310,22 @@
 }
 .percentage-cell {
   width: 100px;
-  background-color: #cae6fc;
+  background-color: var(--color-lightblue);
   overflow: hidden;
   flex-shrink: 0;
-  padding: 8px;
+  padding: var(--padding-5xs);
   box-sizing: border-box;
 }
 .stock-row {
   align-self: stretch;
-  gap: 2px;
+  gap: var(--gap-11xs);
 }
 .limit-container {
   height: 8.5px;
   width: 8.5px;
   position: relative;
   border-radius: 50%;
-  background-color: #00ba4a;
+  background-color: var(--green-g300);
 }
 .bmri {
   width: 88.5px;
@@ -342,7 +342,7 @@
 }
 .bank-symbol {
   flex: 1;
-  padding: 0 20px 0 0;
+  padding: 0 var(--padding-xl) 0 0;
   min-width: 140px;
   text-align: left;
 }
@@ -362,15 +362,15 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 7.5px 8px;
-  gap: 4px;
+  padding: var(--padding-5xs-5) var(--padding-5xs);
+  gap: var(--gap-9xs);
 }
 .bill-amount {
   height: 8.5px;
   width: 8.5px;
   position: relative;
   border-radius: 50%;
-  background-color: #007dfe;
+  background-color: var(--blue-b300-primary);
 }
 .ptba {
   align-self: stretch;
@@ -392,7 +392,7 @@
   width: 8.5px;
   position: relative;
   border-radius: 50%;
-  background-color: #ffb700;
+  background-color: var(--yellow-y300-highlight);
 }
 .sahamstock-parent,
 .stock-table {
@@ -404,11 +404,11 @@
 .stock-table {
   align-self: stretch;
   text-align: right;
-  font-size: 7px;
+  font-size: var(--font-size-6xs);
 }
 .sahamstock-parent {
   flex: 1;
-  gap: 8px;
+  gap: var(--gap-5xs);
   min-width: 260px;
   max-width: 100%;
 }
@@ -425,7 +425,7 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-between;
-  gap: 20px;
+  gap: var(--gap-xl);
 }
 .div68 {
   width: 23px;
@@ -440,19 +440,19 @@
   top: 4.5px;
   left: 0;
   border-radius: 50%;
-  background-color: #007dfe;
-  border: 0 solid #fff;
+  background-color: var(--blue-b300-primary);
+  border: 0 solid var(--black-b0-bgwhite);
   box-sizing: border-box;
   width: 100px;
   height: 100px;
 }
 .frame-child19,
 .frame-child20 {
-  background-color: #ffb700;
+  background-color: var(--yellow-y300-highlight);
   z-index: 1;
 }
 .frame-child20 {
-  background-color: #00ba4a;
+  background-color: var(--green-g300);
 }
 .vector-296-stroke21 {
   top: 0;
@@ -496,12 +496,12 @@
 }
 .graph-elements-inner {
   flex-direction: row;
-  padding: 0 10px;
+  padding: 0 var(--padding-3xs);
 }
 .graph-elements {
   align-self: stretch;
   flex-direction: column;
-  gap: 102.5px;
+  gap: var(--gap-83xl-5);
 }
 .content-container,
 .content6,
@@ -516,7 +516,7 @@
   flex-direction: column;
   padding: 2px 0 0;
   text-align: right;
-  font-size: 7px;
+  font-size: var(--font-size-6xs);
 }
 .content-container,
 .content6 {
@@ -526,17 +526,17 @@
 .content6 {
   flex: 1;
   flex-wrap: wrap;
-  padding: 0 6px 0 0;
-  gap: 69px;
+  padding: 0 var(--padding-7xs) 0 0;
+  gap: var(--gap-50xl);
   z-index: 1;
 }
 .content-container {
   align-self: stretch;
-  padding: 0 16px;
+  padding: 0 var(--padding-base);
   text-align: left;
-  font-size: 9px;
-  color: #333;
-  font-family: "TT Interphases";
+  font-size: var(--font-size-4xs);
+  color: var(--black-b400-txttitle);
+  font-family: var(--font-tt-interphases);
 }
 .kartu-kreditcredit-card-container1 {
   width: 100%;
@@ -547,11 +547,11 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 0 20px 0 0;
+  padding: 0 var(--padding-xl) 0 0;
 }
 .details {
   margin: 0;
-  color: #494949;
+  color: var(--black-b300-txtbody);
 }
 .balance-row,
 .card-balance {
@@ -561,10 +561,10 @@
 }
 .card-balance {
   flex: 1;
-  background-color: #cae6fc;
+  background-color: var(--color-lightblue);
   overflow: hidden;
   justify-content: flex-start;
-  padding: 8px;
+  padding: var(--padding-5xs);
   box-sizing: border-box;
   min-width: 129px;
 }
@@ -572,7 +572,7 @@
   align-self: stretch;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 2px;
+  gap: var(--gap-11xs);
 }
 .div69,
 .limit-value {
@@ -583,7 +583,7 @@
   flex: 1;
   flex-direction: row;
   justify-content: flex-start;
-  padding: 7.5px 8px;
+  padding: var(--padding-5xs-5) var(--padding-5xs);
   box-sizing: border-box;
   min-width: 129px;
 }
@@ -600,13 +600,13 @@
 }
 .table {
   align-self: stretch;
-  font-size: 7px;
+  font-size: var(--font-size-6xs);
 }
 .table-content {
   width: 420px;
-  padding: 0 20px 0 0;
+  padding: 0 var(--padding-xl) 0 0;
   box-sizing: border-box;
-  gap: 8px;
+  gap: var(--gap-5xs);
   max-width: 100%;
 }
 .content7,
@@ -622,10 +622,10 @@
   z-index: 1;
 }
 .saldo-akhir-idr-ending-balan-container {
-  background-color: #cae6fc;
+  background-color: var(--color-lightblue);
   overflow: hidden;
   align-items: flex-start;
-  padding: 8px;
+  padding: var(--padding-5xs);
   box-sizing: border-box;
   min-width: 129px;
   text-align: right;
@@ -650,13 +650,13 @@
 .revolving-loan-title {
   flex: 1;
   overflow: hidden;
-  padding: 4px 8px;
+  padding: var(--padding-9xs) var(--padding-5xs);
   box-sizing: border-box;
 }
 .revolving-loan-title-wrapper {
   align-self: stretch;
-  background-color: #e3f1fc;
-  color: #494949;
+  background-color: var(--color-aliceblue);
+  color: var(--black-b300-txtbody);
 }
 .loan-installment-empty {
   flex: 1;
@@ -664,7 +664,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  padding: 7.5px 8px;
+  padding: var(--padding-5xs-5) var(--padding-5xs);
   box-sizing: border-box;
   min-width: 129px;
   text-align: right;
@@ -676,7 +676,7 @@
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 2px;
+  gap: var(--gap-11xs);
 }
 .non-revolving-loan {
   position: relative;
@@ -693,13 +693,13 @@
   max-width: 100%;
 }
 .table2 {
-  font-size: 7px;
+  font-size: var(--font-size-6xs);
 }
 .top-divider {
   align-self: stretch;
   height: 1px;
   position: relative;
-  border-top: 1px solid #ededed;
+  border-top: 1px solid var(--black-b50-bgdisabled);
   box-sizing: border-box;
 }
 .main-content {
@@ -713,10 +713,10 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  font-family: "TT Interphases";
+  font-family: var(--font-tt-interphases);
   font-weight: 700;
-  font-size: 8px;
-  color: #333;
+  font-size: var(--font-size-5xs);
+  color: var(--black-b400-txttitle);
   min-width: 250px;
 }
 .divider-separator-horizont {
@@ -739,12 +739,12 @@
   width: 563px;
   flex-direction: column;
   padding: 0;
-  gap: 12px;
+  gap: var(--gap-xs);
   z-index: 1;
 }
 .livin-content {
   flex-direction: row;
-  padding: 0 16px 7px;
+  padding: 0 var(--padding-base) var(--padding-6xs);
 }
 .pt-bank-mandiri2 {
   width: 343.3px;
@@ -769,7 +769,8 @@
   flex: 1;
   flex-direction: column;
   align-items: flex-start;
-  padding: 10px 10px 12px 16px;
+  padding: var(--padding-3xs) var(--padding-3xs) var(--padding-xs)
+    var(--padding-base);
   box-sizing: border-box;
   min-width: 302px;
 }
@@ -794,9 +795,9 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
-  padding: 0 16px 0 0;
+  padding: 0 var(--padding-base) 0 0;
   box-sizing: border-box;
-  gap: 45px;
+  gap: var(--gap-26xl);
 }
 .footer2,
 .root2 {
@@ -805,19 +806,19 @@
 }
 .footer2 {
   align-self: stretch;
-  border-top: 1px solid #ededed;
+  border-top: 1px solid var(--black-b50-bgdisabled);
   box-sizing: border-box;
   z-index: 1;
   text-align: left;
-  font-size: 8px;
-  color: #ada6ae;
-  font-family: "TT Interphases";
+  font-size: var(--font-size-5xs);
+  color: var(--black-character-low-emphasis);
+  font-family: var(--font-tt-interphases);
 }
 .root2 {
   width: 595px;
-  background-color: #fff;
+  background-color: var(--black-b0-bgwhite);
   position: relative;
-  gap: 20px;
+  gap: var(--gap-xl);
   line-height: normal;
   letter-spacing: normal;
 }
@@ -826,7 +827,7 @@
     flex-wrap: wrap;
   }
   .content6 {
-    gap: 34px;
+    gap: var(--gap-15xl);
   }
 }
 @media screen and (max-width: 450px) {
@@ -845,9 +846,9 @@
     width: 100%;
   }
   .content6 {
-    gap: 17px;
+    gap: var(--gap-mid);
   }
   .content11 {
-    gap: 22px;
+    gap: var(--gap-3xl);
   }
 }
